--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+#gameBoardContainer {
+	display: flex;
+	justify-content: space-around;
+}
+.gameBoardStyling {
+	display: grid;
+	grid-template-rows: repeat(10, 1fr);
+	grid-template-columns: repeat(10, 1fr);
+	justify-self: center;
+	margin-top: 5px;
+	min-width: 5px;
+	min-height: 5px;
+	width: 50vw;
+	height: 50vh;
+	max-height: px;
+	max-width: 500px;
+	background: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#userShipsContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50px;
+	border: 1px solid black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gameboardGrid:hover {
+	cursor: pointer;
+	background-color: aqua;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gameboardGrid {
+	border: 1px solid black;
+	background: white;
 }
